--- a/birthday_wish/style.css
+++ b/birthday_wish/style.css
@@ -58,11 +58,65 @@ input{
 #response{
 	display: none;
 	position: relative;
-	top: 300px;
+	/*top: 50px;*/
 
 }
+#aryan img{
+	text-align: center;
+	width: 60%;
+	height: 60%;
+	padding: 10px;
+	border: 2px solid rgb(24,72,65);
+}
+#rname{
+	color: rgb(255,255,255);
+	background: linear-gradient(#B5C1C1,#5F6C6C,#1A4c48)
+}
+.firstimage div{
+	background-image: url("images/first.jpeg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+	height:300px;
+	margin: 10px;
+	text-align: right;
+	border: 2px solid rgb(24,72,65);
 
+}
+.firstimage div h3{
+	color: #fff;
+	padding: 30px;
+	font-size: 30px;
 
+}
+.secondimage div{
+	background-image: url("images/second.jpeg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+	height:300px;
+	margin: 10px;
+	text-align: left;
+	border: 2px solid rgb(24,72,65);
+
+}
+.secondimage div h3{
+	color: #000;
+	padding: 20px;
+	font-size: 30px;
+
+}
+footer{
+	width: 100%;
+	height: 50px;
+	text-align: center;
+	color: #fff;
+	background-color: rgb(35,43,43);
+	padding: 5px;
+	font-size: 19px;
+	margin-top: 5px;
+
+}
 
 
 
