--- a/birthday_wish/style.css
+++ b/birthday_wish/style.css
@@ -10,6 +10,9 @@ div{
 	margin: 20px;
 
 }
+body{
+	background-color: rgb(230,230,230);
+}
 h1{
 	color: #000;
 	text-align: center;
@@ -28,8 +31,8 @@ h1{
 .second{
 	padding: 5px;
 	height: 400px;
-		background: linear-gradient(#b09de6,red,#3d0fbc);
-		display: block;
+	background: linear-gradient(#b09de6,red,#3d0fbc);
+	display: block;
 
 }
 .second .form{
@@ -74,7 +77,8 @@ input{
 }
 #rname{
 	color: rgb(255,255,255);
-	background: linear-gradient(#B5C1C1,#5F6C6C,#1A4c48)
+	text-shadow: 2px 2px #000;
+	background: linear-gradient(#b09de6,red,#3d0fbc);
 }
 .firstimage div{
 	background-image: url("images/first.jpeg");
@@ -90,7 +94,7 @@ input{
 .firstimage div h3{
 	color: #fff;
 	padding: 30px;
-	font-size: 40px;
+	font-size: 30px;
 
 }
 .secondimage div{
@@ -107,7 +111,7 @@ input{
 .secondimage div h3{
 	color: #000;
 	padding: 20px;
-	font-size: 50px;
+	font-size: 30px;
 
 }
 footer{
@@ -121,6 +125,11 @@ footer{
 	margin-top: 5px;
 
 }
+.botlink{
+	font-size: 30px;
+	color: #fff;
+	background-color: rgba(10,10,200,0.6);
 
+}
 
 
