--- a/birthday_wish/style.css
+++ b/birthday_wish/style.css
@@ -105,11 +105,12 @@ input{
 	height:800px;
 	margin: 10px;
 	text-align: left;
+	float : bottom;
 	border: 2px solid rgb(24,72,65);
 
 }
 .secondimage div h3{
-	color: #000;
+	color: #fff;
 	padding: 20px;
 	font-size: 30px;
 
