--- a/birthday_wish/style.css
+++ b/birthday_wish/style.css
@@ -83,36 +83,46 @@ input{
 .firstimage div{
 	background-image: url("images/third.jpeg");
 	background-repeat: no-repeat;
-	background-size: cover;
 	width: 100%;
 	height:800px;
 	margin: 10px;
 	text-align: left;
 	border: 2px solid rgb(24,72,65);
+	background-size: cover;
+	background-position: center;
+
 
 }
 .firstimage div h3{
 	color: #fff;
+	text-shadow: 2px 2px #000;
 	padding: 30px;
-	font-size: 30px;
+	font-size: 40px;
+	position: relative;
+	top: 500px;
+	left: 50px;
 
 }
 .secondimage div{
 	background-image: url("images/fourth.jpeg");
 	background-repeat: no-repeat;
-	background-size: cover;
 	width: 100%;
 	height:800px;
 	margin: 10px;
 	text-align: left;
-	float : bottom;
 	border: 2px solid rgb(24,72,65);
+	background-size: cover;
+
 
 }
 .secondimage div h3{
 	color: #fff;
+	text-shadow: 2px 2px #000;
 	padding: 20px;
-	font-size: 30px;
+	font-size: 50px;
+	position: relative;
+	top: 550px;
+	left: 50px;
 
 }
 footer{
